﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-05-13
	Changed: Remember window sizes and positions works a little differently.
	Added: More debug output
### 2018-05-12
	Changed: Explorer crash handling. Should be less convinced about explorer crashes when no such thing happened.
### 2018-05-11
	Changed: CPU sampling is simplified. May run better or worse.
	Changed: Debugging for health monitor low memory functionality.
	Changed: Health monitor memory option now respects the more general paging option.
### 2018-05-09
	Fixed: Network tab packet&error deltas were not functioning.
	Changed: Attempt to color errors in UI log.
### 2018-05-07
	Fixed: Apparently Task.Wait() hangs indefinitely under some obscure circumstances. Caused manual power mode to deadlock?
	Fixed: All CPUs mask was messed up.
	Changed: Power auto-adjust default configuration changed a tiny bit.
### 2018-05-06
	Fixed: Weirdness with full CPU mask affinity. -1 is now special value for ignore in UI instead of 0.
	Changed: Explorer crash handling. It's more informative which process crashed and should handle multiple explorer processes better.
### 2018-05-05
	Changed: Allow watchlist rules with no affinity nor priority.
	Fixed: Empty network device list if it was last active tab.
### 2018-05-04
	Fixed: Validation does not find executables correctly.
	Changed: Some behind the scenes things to help catch an elusive problem with per-app power management.
	Fixed: Resize settings not changed when the rule was edited in UI.
### 2018-04-30
	Changed: Code cleanup.
### 2018-04-29
	Fixed: Clear UI log caused the log to not have anything after.
	Changed: Added a bit more logic to ensure tray becomes visible. May not actually help.
	Added: Option to ignore apps in %SYSTEMROOT%/System32. Enabled by default. Partial implementation.
	Removed: Support for case sensitive matching. Case will now always be ignored.
### 2018-04-28